# sqlite-mcp-server

./: CLAUDE.md  LICENSE  README-draft.md  README.md  smithery.yaml
sqlite-explorer-fastmcp-mcp-server/: Dockerfile  README.md  financial_data.db  pyproject.toml  requirements.txt  smithery.yaml  sqlite_explorer.py
